# typescript-types-to-swift-objects

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
test/: example.ts
